# pds_assignment_4

./: .gitignore  README.md
Huffman/: .gitignore  CMakeLists.txt  Makefile
Huffman/.run/: Huffman.run.xml  HuffmanCilk.run.xml  HuffmanPthread.run.xml
Huffman/include/: structs.h
Huffman/include/timer/: timer.cpp
Huffman/src/: file_utils.c  file_utils.cpp  file_utils.h  huffman.cpp  huffman.h  huffman_tree.c  huffman_tree.cpp  huffman_tree.h  main.c  structs.h  timer.h
Huffman/src/cilk/: char_frequency_cilk.cpp  char_frequency_cilk.h  compress_cilk.cpp  compress_cilk.h  decompress_cilk.cpp  decompress_cilk.h  main_cilk.cpp
Huffman/src/pthread/: char_frequency_pth.cpp  char_frequency_pth.h  compress_pth.cpp  compress_pth.h  decompress_pth.cpp  decompress_pth.h  file_utils_pth.cpp  file_utils_pth.h  file_utils_pthread.cpp  file_utils_pthread.h  huffman_pth.cpp  huffman_pth.h  huffman_tree_pthread.cpp  huffman_tree_pthread.h  main_pthread.cpp
Huffman/src/sequential/: char_frequency.cpp  char_frequency.h  compress.cpp  compress.h  decompress.cpp  decompress.h  main.cpp
Huffman/src/serial/: char_frequency.cpp  file_utils.cpp  file_utils.h  huffman_tree.cpp  huffman_tree.h  main.cpp
Huffman/v2_src/: file_utils_v2.c  file_utils_v2.h  huffman_tree_v2.c  huffman_tree_v2.h  main_v2.c
Huffman/v3_src/: file_utils_v3.c  file_utils_v3.h  huffman_tree_v3.c  huffman_tree_v3.h  main_v3.c
Huffman_cpp/: CMakeLists.txt
Huffman_cpp/src/: file_utils.cpp  file_utils.h  huffman_tree.cpp  huffman_tree.h  main.cpp
chess_engine/: CMakeLists.txt
chess_engine/src/: main.c
chess_engine/src/objects/: board.c  board.h
latex/: .gitignore  main.tex
latex/bib/: bibliography.bib
latex/chapters/: conclusions.tex  functionality.tex  introduction.tex  objective_method.tex  sota.tex  testing.tex  title_page.tex
latex/data/cilk/: time_inputsize.txt  time_inputsize_ncores.txt  time_ncores.txt  x_inputsize.txt  x_ncores.txt
latex/data/pthread/: time_inputsize.txt  time_ncores.txt  x_inputsize.txt  x_ncores.txt
latex/data/sequential/: time_inputsize.txt
latex/template/: template.tex
source/Axpy/: Makefile  README.md
source/Axpy/src/: axpy_cilkfor.c  axpy_pthread.c  axpy_sequential.c  axpy_utils.c  axpy_utils.h  main.c
